fixed logo size and navbar spacing

--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,21 @@
-    body {
-        background-color: lightblue;
-    }
+body{
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    font-family: "Titillium Web", sans-serif; 
+}
+
+
+
+/* Tagline */
+.tagline-container{
+    margin-left: 60px;
+    margin-top: 10px;   
+}
+
+.tagline{
+    margin: 0;
+    font-size: 30px;
+    color: rgb(209, 215, 85);
+    font-weight: 600;
+}
